# Process_framework

./: .env.example  .gitignore  README.md  chat_ui.html  package-lock.json  process_ui.html  pyproject.toml
docs/: APPLY_MIGRATION_MANUAL.md  AUTO_LEARNING_SETUP.md  AUTO_WORK_ANSWER.md  CLUSTERING_AND_LEARNING.md  CLUSTERING_IMPLEMENTATION_SUMMARY.md  DATA_FLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_STATUS.md  FIX_CONSTRAINT_ERROR.md  FIX_RESPONSE_LENGTH_ISSUE.md  LEARNING_LOOP_GUIDE.md  LEARNING_NOT_WORKING.md  QUICK_START.md  QUICK_START_FIX.md  READY_TO_DEPLOY.md  RESPONSE_TOO_LONG_FIX.md  START_HERE.md  SUPABASE_SETUP.md  SYSTEM_COMPLETE.md  SYSTEM_OPERATIONAL.md  TROUBLESHOOTING_RESPONSE_LENGTH.md  VERIFICATION_COMPLETE.md  VISUAL_ARCHITECTURE.md
examples/: demo_diagnostic_working.py  demo_full_process.py  example_bad_case_learning.py
learn_from_chat/: README.md  __init__.py  correction_extractor.py  db_handler.py  orchestrator.py  sentiment.py
process_framework/: __init__.py  framework.py
process_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: dashboard_migration.py  diagnose_guard_injection.py  diagnose_learning_loop.py  direct_apply_migration.py  final_deploy.py  rest_api_deploy.py
supabase/: apply_migrations.sh  apply_via_api.sh  setup_and_migrate.sh  test_migration.sql
tests/: __init__.py  helpers.py  test_api.py  test_count.py  test_effectiveness.py  test_evaluation.py  test_feedback.py  test_framework.py  (+9 more)
(+31 files in other folders)
