[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-framework"
version = "0.1.0"
description = "PROCESS AI Review Framework — a seven-stage AI system evaluation and audit framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["AI", "evaluation", "audit", "LLM", "hallucination", "PROCESS"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["process_framework*"]
